[package]
name = "gi"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
configparser = "3.0.4"
dirs = "5.0.1"
env_logger = "0.10.1"
git2 = "0.18.1"
log = "0.4.20"
open = "5.0.1"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
slug = "0.1.5"
toml = "0.8.8"
url-escape = "0.1.1"
